fixing CFG invariant checks