@@ -307,6 +307,9 @@
         <configuration>
           <!-- enable the compiler’s incremental mode -->
           <useIncrementalCompilation>false</useIncrementalCompilation>
+          <source>22</source>
+          <target>22</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <!-- pmd (and cpd), static analysis on syntax -->
